first note prototype

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="notebook">
     <!-- Main pane -->
     <section class="main">
-
+      <textarea v-model="content"></textarea>
     </section>
   </div>
 
