--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <!-- Include the library in the page -->
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <!-- Add the marked library: -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
   <!-- Notebook app -->
   <div id="notebook">
