--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 
   <!-- Notebook app -->
   <div id="notebook">
+
     <!-- Main pane -->
     <section class="main">
       <textarea v-model="content"></textarea>
     </section>
+
+    <!-- Preview pane -->
+    <aside class="preview">
+      {{ notePreview }}
+    </aside>
   </div>
 
   <!-- Some JavaScript -->
