add render html in preview pane

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <!-- Preview pane -->
-    <aside class="preview">
+    <aside class="preview" v-html="notePreview">
       {{ notePreview }}
     </aside>
   </div>
