add sidebar and data property: notes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <!-- Notebook app -->
   <div id="notebook">
 
+    <!-- Sidebar -->
+    <aside class="side-bar">
+      <!-- Notes List goes here -->
+    </aside>
+
     <!-- Main pane -->
     <section class="main">
       <textarea v-model="content"></textarea>
