Add 'Add note button' with @click addNote

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
     <!-- Sidebar -->
     <aside class="side-bar">
-      <!-- Notes List goes here -->
+      <!-- Toolbar -->
+      <div class="toolbar">
+        <!-- Add note button -->
+        <button @click="addNote">
+          <i class="material-icons">add</i> Add note
+        </button>
+      </div>
     </aside>
 
     <!-- Main pane -->
