display notes list

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <i class="material-icons">add</i> Add note
         </button>
       </div>
+      <div class="notes">
+        <!-- Note list here -->
+        <div class="note" v-for="note of notes">{{ note.title }}</div>
+      </div>
     </aside>
 
     <!-- Main pane -->
