--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Main pane -->
     <section class="main">
-      <textarea v-model="content"></textarea>
+      <textarea v-model="selectedNote.content"></textarea>
     </section>
 
     <!-- Preview pane -->
