--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       <div class="notes">
         <!-- Note list here -->
         <div class="note" 
-          v-for="note of notes"
+          v-for="note of sortedNotes"
           @click="selectNote(note)"
           :class="{ selected: note === selectedNote }"
-          >{{ note.title }}
+          ><i class="material-icons icon" v-if="note.favorite">star</i>
+          {{ note.title }}
         </div>
       </div>
     </aside>
@@ -42,6 +43,11 @@
         <class class="toolbar">
           <!-- Toolbar for rename, delete, and favoriting -->
           <input v-model="selectedNote.title" placeholder="Note title" />
+          <button @click="favoriteNote" title="Favorite note">
+            <i class="material-icons">
+              {{ selectedNote.favorite ? 'star' : 'star_border' }}
+            </i>
+          </button>
           <button @click="removeNote" title="Remove note">
             <i class="material-icons">delete</i>
           </button>
